fix overflow

--- a/Styling/style.css
+++ b/Styling/style.css
@@ -22,6 +22,7 @@ html{
 }
 
 body {
+  overflow-x: hidden;
   font-family: Georgia, serif;
 }
 
